# PipeMind

./: .env.example  .gitignore  CITATIONS.md  LICENSE  README.md  TODO_PIPEMIND_DYN.txt  pyproject.toml  pytest.ini
.pipemind_runs/20250924-120305/: Snakefile
.pipemind_runs/20250924-120707/: Snakefile
.pipemind_runs/20250924-144328/: Snakefile
.pipemind_runs/20250928-143839/: Snakefile
.pipemind_runs/20250928-155810/: Snakefile
.pipemind_runs/agent_last/: Snakefile
.snakemake/iocache/: latest.pkl
conda-recipe/: README.md  meta.yaml  requirements.txt
pipemind/: __init__.py
pipemind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pipemind/cli/: app.py  intake.py
pipemind/dag/: __init__.py  builder.py
pipemind/mcp_server/: server.py
pipemind/registry/: README.md  parser.py  registry.yaml  schema.py
pipemind/snakemake/: __init__.py  generator.py
pipemind/tests/: README-fixtures.md  test_cli.py  test_dag.py  test_llm.py  test_parser.py  test_parser_extended.py  test_snakemake_config_resolution.py  test_snakemake_dynamic.py  test_snakemake_dynamic_inputs.py  test_snakemake_symbolic_chain.py
pipemind/tools/: __init__.py  generate_wrappers.py  runner.py
pipemind/utils/: audit.py  io_types.py  llm.py
